# SID-LLMREC

./: .gitignore  README.md  pyproject.toml
configs/datasets/: nyc.yaml
configs/eval/: default.yaml
configs/models/: qwen25_7b.yaml  qwen3_8b.yaml
configs/retrieval/: default.yaml
configs/train/: alignment_phase_a.yaml  alignment_phase_b.yaml  alignment_phase_b1.yaml  alignment_phase_b2.yaml  alignment_trl.yaml  grpo_ms_swift.yaml  grpo_ms_swift_qwen3.yaml  grpo_placeholder.yaml  grpo_verl.yaml  grpo_verl_qwen3.yaml  sft_llamafactory.yaml  sid_nyc.yaml  warmup_llamafactory.yaml
docs/: 项目使用手册.zh-CN.md
legacy/verl_backup/: README.md
src/gnprsid/: __init__.py  cli.py
src/gnprsid/alignment/: __init__.py  build_data.py  evaluate.py  semantic.py
src/gnprsid/common/: __init__.py  config.py  io.py  logging.py  paths.py  profiles.py  runtime.py  tokenizer.py  types.py
src/gnprsid/data/: __init__.py  legacy.py  prepare.py  raw_nyc.py  samples.py
src/gnprsid/eval/: __init__.py  metrics.py  run.py  summarize.py
tests/: test_alignment_build_data.py  test_alignment_eval.py  test_alignment_semantic.py  test_data_raw_nyc.py  test_grpo_build_data.py  test_grpo_inspect_sample.py  test_grpo_ms_swift_plugin.py  test_grpo_reward.py  test_grpo_reward_trace.py  test_inference_batch.py  test_inference_modeling.py  test_metrics.py  test_prompts.py  test_retrieval.py  test_sid_tokens.py  test_tokenizer_fallback.py  test_train_alignment_backend.py  test_train_grpo_backend.py  test_train_merge.py  test_train_warmup_backend.py  test_warmup_build_data.py
(+38 files in other folders)
