[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnprsid"
version = "0.1.0"
description = "Linux-first GNPR-SID V2 research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tqdm>=4.66",
  "torch>=2.5",
  "transformers>=4.57.1",
  "huggingface-hub>=0.36",
  "datasets>=2.20",
  "trl>=0.9",
  "peft>=0.12",
  "sentence-transformers>=3.0",
  "sentencepiece>=0.2.0",
  "safetensors>=0.4.5",
]

[project.optional-dependencies]
train = [
  "wandb>=0.18",
  "accelerate>=1.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
